--- a/bookworm-app/package.json
+++ b/bookworm-app/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react": "^18.1.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.70.5",
+    "react-native-paper": "^5.1.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
