--- a/bookworm-app/package.json
+++ b/bookworm-app/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.7",
+    "@react-native-firebase/app": "^17.1.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
+    "react-native-actions-sheet-picker": "^0.3.5",
     "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-select-dropdown": "^3.2.1",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
