--- a/bookworm-app/package.json
+++ b/bookworm-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@firebase/firestore": "^3.8.3",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.7",
     "@react-native-firebase/app": "^17.1.0",
