update the sorting method

--- a/bookworm-app/app.json
+++ b/bookworm-app/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.lindany.bookwormapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "14a60d1e-496e-4819-8a81-2c59e0466bc9"
+      }
     }
   }
 }
